# course_project_3

./: .coverage  main.py  operations.json  pyproject.toml
course_project_3/: functions.py
src/: functions.py
tests/: test_function.py
